--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <h2>Minh</h2>
     <h1>WWWw</h1>
+    <h2>Minh</h2>
+    <h2>Minh</h2>
     <p>lorem ipsum dolor sit amet, consectet</p>
 </body>
 
